<resources>
    <string name="app_name">SimpleLogin</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="redirect_register">Do not have an account? Sign up</string>
    <string name="back_to_login">Back to login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
</resources>