<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="@drawable/background3"
            tools:context=".activity.LoginActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="8dp"
                    android:text="@={viewModel.username}" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:text="@={viewModel.email}" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:text="@={viewModel.password}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/transparent_button"
                    android:onClick="@{()-> viewModel.onRegisterClicked()}"
                    android:text="@string/sign_up"
                    bind:toastMessage="@{viewModel.toastMessage}" />

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{() -> viewModel.setLoginActivity(context)}"
                    android:text="@string/back_to_login"
                    android:textAlignment="center" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="viewModel"
            type="com.omer.simplelogin.viewmodel.RegisterViewModel" />
    </data>
</layout>