<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background3"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:text="@={viewModel.username}" />


                <EditText
                    android:id="@+id/inPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:text="@={viewModel.password}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/transparent_button"
                    android:onClick="@{()-> viewModel.onLoginClicked()}"
                    android:text="@string/login"
                    bind:toastMessage="@{viewModel.toastMessage}" />

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:onClick="@{() -> viewModel.setRegisterActivity(context)}"
                    android:text="@string/redirect_register"
                    android:textAlignment="center" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <data>

        <variable
            name="viewModel"
            type="com.omer.simplelogin.viewmodel.LoginViewModel" />
    </data>
</layout>

